--- a/lego-analysis-master/project.ipynb
+++ b/lego-analysis-master/project.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "dc": {
      "key": "3"
@@ -442,7 +442,7 @@
        "49  400              Hero Factory        False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +558,7 @@
        "4        Space  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +679,7 @@
        "4     Legoland  411        False  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
        "(153, 8)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -760,12 +760,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>set_num</th>\n",
-       "      <th>name_x</th>\n",
        "      <th>year</th>\n",
-       "      <th>num_parts</th>\n",
-       "      <th>theme_name</th>\n",
        "      <th>parent_theme</th>\n",
+       "      <th>num_parts</th>\n",
        "      <th>id</th>\n",
        "      <th>is_licensed</th>\n",
        "      <th>count</th>\n",
@@ -773,173 +770,204 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>3702</th>\n",
-       "      <td>7161-1</td>\n",
-       "      <td>Gungan Sub</td>\n",
+       "      <th>0</th>\n",
        "      <td>1999</td>\n",
-       "      <td>379.0</td>\n",
-       "      <td>Star Wars Episode 1</td>\n",
        "      <td>Star Wars</td>\n",
-       "      <td>158</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1384.0</td>\n",
+       "      <td>2054</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3705</th>\n",
-       "      <td>7171-1</td>\n",
-       "      <td>Mos Espa Podrace</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Star Wars Episode 1</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2000</td>\n",
        "      <td>Star Wars</td>\n",
-       "      <td>158</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2580.0</td>\n",
+       "      <td>4108</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3690</th>\n",
-       "      <td>7140-1</td>\n",
-       "      <td>X-wing Fighter</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>271.0</td>\n",
-       "      <td>Star Wars Episode 4/5/6</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2001</td>\n",
        "      <td>Star Wars</td>\n",
-       "      <td>158</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2949.0</td>\n",
+       "      <td>2212</td>\n",
+       "      <td>14</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3685</th>\n",
-       "      <td>7130-1</td>\n",
-       "      <td>Snowspeeder</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Star Wars Episode 4/5/6</td>\n",
+       "      <th>6</th>\n",
+       "      <td>2002</td>\n",
        "      <td>Star Wars</td>\n",
-       "      <td>158</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>4735.0</td>\n",
+       "      <td>4424</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3684</th>\n",
-       "      <td>7128-1</td>\n",
-       "      <td>Speeder Bikes</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>93.0</td>\n",
-       "      <td>Star Wars Episode 4/5/6</td>\n",
+       "      <th>9</th>\n",
+       "      <td>2003</td>\n",
        "      <td>Star Wars</td>\n",
-       "      <td>158</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6660.0</td>\n",
+       "      <td>5056</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>12</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>1659.0</td>\n",
+       "      <td>3160</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10259</th>\n",
-       "      <td>21133-1</td>\n",
-       "      <td>The Witch Hut</td>\n",
+       "      <th>16</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>4730.0</td>\n",
+       "      <td>4424</td>\n",
+       "      <td>28</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>2769.0</td>\n",
+       "      <td>1738</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>11361.0</td>\n",
+       "      <td>2528</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>6865.0</td>\n",
+       "      <td>3634</td>\n",
+       "      <td>23</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>3953.0</td>\n",
+       "      <td>6162</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>6003.0</td>\n",
+       "      <td>4740</td>\n",
+       "      <td>30</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>2011</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>3451.0</td>\n",
+       "      <td>5056</td>\n",
+       "      <td>32</td>\n",
+       "      <td>32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>2012</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>6769.0</td>\n",
+       "      <td>6794</td>\n",
+       "      <td>43</td>\n",
+       "      <td>43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>6159.0</td>\n",
+       "      <td>5530</td>\n",
+       "      <td>35</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>8293.0</td>\n",
+       "      <td>7110</td>\n",
+       "      <td>45</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>11410.0</td>\n",
+       "      <td>9164</td>\n",
+       "      <td>58</td>\n",
+       "      <td>58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>76</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>Star Wars</td>\n",
+       "      <td>6934.0</td>\n",
+       "      <td>9638</td>\n",
+       "      <td>61</td>\n",
+       "      <td>61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
        "      <td>2017</td>\n",
-       "      <td>502.0</td>\n",
-       "      <td>Minecraft</td>\n",
-       "      <td>Minecraft</td>\n",
-       "      <td>577</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8675</th>\n",
-       "      <td>41148-1</td>\n",
-       "      <td>Elsa's Magical Ice Palace</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Disney Princess</td>\n",
-       "      <td>Disney Princess</td>\n",
-       "      <td>579</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8674</th>\n",
-       "      <td>41147-1</td>\n",
-       "      <td>Anna's Snow Adventure</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Disney Princess</td>\n",
-       "      <td>Disney Princess</td>\n",
-       "      <td>579</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8673</th>\n",
-       "      <td>41146-1</td>\n",
-       "      <td>Cinderella's Enchanted Evening</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>347.0</td>\n",
-       "      <td>Disney Princess</td>\n",
-       "      <td>Disney Princess</td>\n",
-       "      <td>579</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8672</th>\n",
-       "      <td>41145-1</td>\n",
-       "      <td>Ariel and the Magical Spell</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Disney Princess</td>\n",
-       "      <td>Disney Princess</td>\n",
-       "      <td>579</td>\n",
-       "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>Super Heroes</td>\n",
+       "      <td>13123.0</td>\n",
+       "      <td>34704</td>\n",
+       "      <td>72</td>\n",
+       "      <td>72</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>345 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       set_num                          name_x  year  num_parts  \\\n",
-       "3702    7161-1                      Gungan Sub  1999      379.0   \n",
-       "3705    7171-1                Mos Espa Podrace  1999        NaN   \n",
-       "3690    7140-1                  X-wing Fighter  1999      271.0   \n",
-       "3685    7130-1                     Snowspeeder  1999        NaN   \n",
-       "3684    7128-1                   Speeder Bikes  1999       93.0   \n",
-       "...        ...                             ...   ...        ...   \n",
-       "10259  21133-1                   The Witch Hut  2017      502.0   \n",
-       "8675   41148-1       Elsa's Magical Ice Palace  2017        NaN   \n",
-       "8674   41147-1           Anna's Snow Adventure  2017        NaN   \n",
-       "8673   41146-1  Cinderella's Enchanted Evening  2017      347.0   \n",
-       "8672   41145-1     Ariel and the Magical Spell  2017        NaN   \n",
-       "\n",
-       "                    theme_name     parent_theme   id  is_licensed  count  \n",
-       "3702       Star Wars Episode 1        Star Wars  158         True      1  \n",
-       "3705       Star Wars Episode 1        Star Wars  158         True      1  \n",
-       "3690   Star Wars Episode 4/5/6        Star Wars  158         True      1  \n",
-       "3685   Star Wars Episode 4/5/6        Star Wars  158         True      1  \n",
-       "3684   Star Wars Episode 4/5/6        Star Wars  158         True      1  \n",
-       "...                        ...              ...  ...          ...    ...  \n",
-       "10259                Minecraft        Minecraft  577         True      1  \n",
-       "8675           Disney Princess  Disney Princess  579         True      1  \n",
-       "8674           Disney Princess  Disney Princess  579         True      1  \n",
-       "8673           Disney Princess  Disney Princess  579         True      1  \n",
-       "8672           Disney Princess  Disney Princess  579         True      1  \n",
-       "\n",
-       "[345 rows x 9 columns]"
+       "    year  parent_theme  num_parts     id  is_licensed  count\n",
+       "0   1999     Star Wars     1384.0   2054           13     13\n",
+       "2   2000     Star Wars     2580.0   4108           26     26\n",
+       "4   2001     Star Wars     2949.0   2212           14     14\n",
+       "6   2002     Star Wars     4735.0   4424           28     28\n",
+       "9   2003     Star Wars     6660.0   5056           32     32\n",
+       "12  2004     Star Wars     1659.0   3160           20     20\n",
+       "16  2005     Star Wars     4730.0   4424           28     28\n",
+       "20  2006     Star Wars     2769.0   1738           11     11\n",
+       "24  2007     Star Wars    11361.0   2528           16     16\n",
+       "28  2008     Star Wars     6865.0   3634           23     23\n",
+       "32  2009     Star Wars     3953.0   6162           39     39\n",
+       "36  2010     Star Wars     6003.0   4740           30     30\n",
+       "42  2011     Star Wars     3451.0   5056           32     32\n",
+       "47  2012     Star Wars     6769.0   6794           43     43\n",
+       "52  2013     Star Wars     6159.0   5530           35     35\n",
+       "59  2014     Star Wars     8293.0   7110           45     45\n",
+       "67  2015     Star Wars    11410.0   9164           58     58\n",
+       "76  2016     Star Wars     6934.0   9638           61     61\n",
+       "82  2017  Super Heroes    13123.0  34704           72     72"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -948,9 +976,21 @@
     "licensed_sorted = licensed.sort_values('year')\n",
     "licensed_sorted['count'] = 1\n",
     "\n",
-    "summed_df = licensed_sorted.groupby(['year','parent_theme'])\n",
+    "summed_df = licensed_sorted.groupby(['year','parent_theme']).sum(numeric_only=True).reset_index()\n",
     " \n",
-    "summed_df.head()"
+    "max_df = summed_df.sort_values('count', ascending = False).drop_duplicates(['year'])\n",
+    "\n",
+    "max_df.sort_values('year', inplace=True)\n",
+    "max_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_era = 2017"
    ]
   },
   {
